@@ -1,0 +1,12 @@
+parse and validate simple name/value option pairs. Example:
+
+  use Data::OptList;
+
+  my $options = Data::Optlist::mkopt([
+    qw(key1 key2 key3 key4),
+    key5 => { ... },
+    key6 => [ ... ],
+    key7 => sub { ... },
+    key8 => { ... },
+    key8 => [ ... ],
+  ]);
