@@ -1,0 +1,15 @@
+# $NetBSD: Makefile,v 1.1.1.1 2007/06/10 11:41:09 abs Exp $
+
+DISTNAME=	Data-OptList-0.101
+PKGNAME=	p5-${DISTNAME}
+CATEGORIES=	devel perl5
+MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Data/}
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://search.cpan.org/dist/Data-OptList/
+COMMENT=	Parse and validate simple name/value option pairs
+
+PERL5_PACKLIST=		auto/Data/OptList/.packlist
+
+.include "../../lang/perl5/module.mk"
+.include "../../mk/bsd.pkg.mk"
